--- a/custom.css
+++ b/custom.css
@@ -78,6 +78,8 @@
     color: black; 
     font-weight: 600; 
     font-size: 20px;
+    display: flex;
+    align-items: center;
  }
  
  .text-hero {
@@ -387,8 +389,28 @@
     font-size: 25px;
 }
 
+.fade-in {
+    opacity: 0;
+    transform: translateY(30px); 
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  }
+  
+  .fade-in.visible {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  
 
- 
+  .bt-black{
+        border-bottom: #000000 solid 1px;
+        padding-bottom: 80px;
+
+
+    }
+
+    .accordion-label{
+        text-align: start;
+    }
 @media (max-width: 1024px) {
     .text-nav-mobile{
         font-size: 22px;
