--- a/custom.css
+++ b/custom.css
@@ -197,7 +197,7 @@
 
 
 ::-webkit-scrollbar-track {
-    background: #3f3f3f; /* Цвет фона */
+    background: #3f3f3f; 
 }
 
 
@@ -213,48 +213,58 @@
 }
 
 
-
-  
-  .sim-slider {
-    max-width: 1000px;
-    min-width: 320px;
-    margin: 20px auto;
-    padding: 30px 50px;
-    border: 1px solid #ccd;
-    background-color: white;
-  }
-  
-
-  .sim-slider {
+   .sim-slider {
     position: relative;
-  }
-  
-  .sim-slider-list {
-    margin: 0;
-    padding: 0;
-
-  }
-  
-  .sim-slider-element {
     width: 100%;
-    transition: opacity 1s ease-in;
-    opacity: 0;
+    max-width: 1000px;
+    aspect-ratio: 16 / 11; 
+    overflow: hidden;
+}
+
+  .sim-slider-list li {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    z-index: 2;
     left: 0;
     top: 0;
-    display: block;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+  .sim-slider-list {
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
   }
-  
+
+  .sim-slider-element {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    transition: opacity 1s ease-in;
+    opacity: 0;
+    z-index: 2;
+  }
+
+  .sim-slider-list li img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
   div.sim-slider-arrow-left,
   div.sim-slider-arrow-right {
-    width: 22px;
-    height: 40px;
-    position: absolute;
-    cursor: pointer;
-    opacity: 0.6;
-    z-index: 4;
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 4;
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
   }
   
   div.sim-slider-arrow-left {
@@ -284,14 +294,12 @@
   }
 
   div.sim-slider-dots {
-    width: 100%;
-    height: auto;
     position: absolute;
-    left: 0;
-    bottom: 0;
-    z-index: 3;
+    bottom: 20px;
+    width: 100%;
     text-align: center;
-  }
+    z-index: 5;
+}
   
   span.sim-dot {
     width: 10px;
@@ -325,7 +333,7 @@
     z-index: 1000;
 }
 
-/* Линии бургера */
+
 .burger_line {
     width: 100%;
     height: 4px;
@@ -334,7 +342,6 @@
     
 }
 
-/* Меняем линии на крестик */
 .burger.open #bar1 {
     transform: translateY(11px) rotate(45deg);
     
