--- a/custom.css
+++ b/custom.css
@@ -93,22 +93,35 @@
     text-align: justify;
 }
 
-
+.service-wrapper{
+    padding: 80px 0;
+    background-color: var(--accent-color) ;
+}
 
 .service-title{
-    color: var(--accent-color);
+    color: white;
+    font-family: inherit;
+    font-weight: 600;
+
+    margin: 0 0 20px 0;
+    font-size: 48px;
+    line-height: 1.1;
+    word-break: break-all;
+    text-transform: uppercase;
+    margin-bottom: 50px;
 }
 
 .accordion-container {
     margin: 10px 0;
     border-radius: 8px;
     overflow: hidden;
+    
 }
 
 .accordion-container label {
     cursor: pointer;
     display: block;
-    padding: 15px 20px;
+    padding: 40px 20px;
     width: 100%;
     background: #ffffff;
     color: #000000;
@@ -118,26 +131,31 @@
     transition: background-color 0.3s, color 0.3s;
     box-shadow: 1px 8px 16px rgba(33, 26, 97, 0.3); 
     margin-top: 20px;
+    border-radius: 10px;
 }
 
 .accordion-container label:hover {
     background-color: var(--hover-color);
     color: #fff;
     border-left: 5px solid #7d74ff;
+    
 }
 
 .accordion-container input {
     display: none;
+    
 }
 
 .accordion-container label:before {
     content: '\276F';
     float: right;
     transition: transform 0.3s ease;
+
 }
 
 .accordion-container input:checked + label:before {
     transform: rotate(90deg);
+
 }
 
 
@@ -149,6 +167,9 @@
     font-size: 18px;
     box-sizing: border-box;
     transition: max-height 0.5s ease-in-out, padding 0.3s ease-in-out;
+    background-color: #ffffff;
+    border-radius: 10px;
+    
 }
 .accordion-content li{
     margin-bottom: 10px;
@@ -159,6 +180,8 @@
     padding: 15px 20px;
     margin-bottom: 30px;
     box-shadow: 0 8px 26px  rgba(33, 26, 97, 0.2);
+    border-radius: 10px;
+  
 }
 .accordion-container:last-child label{
     margin-bottom: 20px; 
@@ -408,15 +431,16 @@
   }
   
 
-  .bt-black{
-        border-bottom: #000000 solid 1px;
-        padding-bottom: 80px;
-
-
-    }
+  #services {
+    scroll-margin-top: 120px;
+  }
 
     .accordion-label{
         text-align: start;
+    }
+
+    .mobile-version {
+        display: none;
     }
 @media (max-width: 1024px) {
     .text-nav-mobile{
@@ -539,12 +563,20 @@
 
     }
 
-    
+    .desktop-version {
+        display: none;
+    }
+    .mobile-version {
+        display: block;
+    }
     .sim-slider-arrow-left img{
         display: none;
     }
     .sim-slider-arrow-right img{
         display: none;
+    }
+    .accordion-container label{
+        padding: 20px 20px;
     }
 
 
