--- a/style.css
+++ b/style.css
@@ -252,7 +252,7 @@ h3,
   word-break: break-all;
   color: var(--accent-color);
   text-transform: uppercase;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 .title a {
@@ -684,7 +684,7 @@ html:not(.is-scrolled):not(.is-menu-open) .home-page .header a.is-active {
   left: 0;
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 110%;
 }
 
 .main-section__bg img {
@@ -794,6 +794,9 @@ html:not(.is-scrolled):not(.is-menu-open) .home-page .header a.is-active {
 }
 
 .about-section {
+  margin-top: 30px;
+  padding-top: var(--section-space);
+  padding-bottom: var(--section-space);
 
 }
 
