--- a/custom.css
+++ b/custom.css
@@ -117,6 +117,10 @@
     overflow: hidden;
     
 }
+.container{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
 
 .accordion-container label {
     cursor: pointer;
