--- a/custom.css
+++ b/custom.css
@@ -118,8 +118,8 @@
     
 }
 .container{
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 100px !important;
+    padding-bottom: 100px !important;
 }
 
 .accordion-container label {
