--- a/custom.css
+++ b/custom.css
@@ -117,7 +117,7 @@
     overflow: hidden;
     
 }
-.container{
+.main-container{
     padding-top: 100px !important;
     padding-bottom: 100px !important;
 }
