--- a/style.css
+++ b/style.css
@@ -706,13 +706,13 @@ html:not(.is-scrolled):not(.is-menu-open) .home-page .header a.is-active {
 }
 
 .main-section__inner {
-  /* height: 100vh; */
+  height: 45vh;
   /* height: 100svh; */
   min-height: 500px;
   display: flex;
   align-items: center;
   position: relative;
-  padding-top: 108px;
+  padding-top: 200px;
 }
 
 .main-section__content {
